[gd_scene load_steps=100 format=3 uid="uid://dlbrgi3okk3dm"]

[ext_resource type="ArrayMesh" uid="uid://khe6gox5tchy" path="res://assets/models/Ships/DualStriker/DualStriker.obj" id="1_7l8wa"]
[ext_resource type="Script" path="res://assets/scripts/enemy.gd" id="1_y60oy"]
[ext_resource type="Texture2D" uid="uid://bn83q3dpeqhqo" path="res://assets/sprites/fire/Fireball_68x9.png" id="3_bvi5x"]
[ext_resource type="Texture2D" uid="uid://b50mxu2lu6vas" path="res://assets/sprites/explosion/1_0.png" id="4_8in5j"]
[ext_resource type="Texture2D" uid="uid://bwhk1kc8ob080" path="res://assets/sprites/explosion/1_1.png" id="5_hsr7b"]
[ext_resource type="Texture2D" uid="uid://b0k4atuc4mr5p" path="res://assets/sprites/explosion/1_2.png" id="6_ak5j8"]
[ext_resource type="Texture2D" uid="uid://d0grjssrp62mo" path="res://assets/sprites/explosion/1_3.png" id="7_n3jig"]
[ext_resource type="Texture2D" uid="uid://bou83epwnqgcm" path="res://assets/sprites/explosion/1_4.png" id="8_jnvbe"]
[ext_resource type="Texture2D" uid="uid://d0oummjfuevck" path="res://assets/sprites/explosion/1_5.png" id="9_u1l1w"]
[ext_resource type="Texture2D" uid="uid://bs78x5qvdvk3t" path="res://assets/sprites/explosion/1_6.png" id="10_hq74p"]
[ext_resource type="Texture2D" uid="uid://12xm7t4djukh" path="res://assets/sprites/explosion/1_7.png" id="11_jtnfk"]
[ext_resource type="Texture2D" uid="uid://v7w21twrr34e" path="res://assets/sprites/explosion/1_8.png" id="12_fgrus"]
[ext_resource type="Texture2D" uid="uid://bw11u3fmctd7o" path="res://assets/sprites/explosion/1_9.png" id="13_toa0v"]
[ext_resource type="Texture2D" uid="uid://c1i8h20pbicxk" path="res://assets/sprites/explosion/1_10.png" id="14_48swj"]
[ext_resource type="Texture2D" uid="uid://bkmqk2nu3y4ry" path="res://assets/sprites/explosion/1_11.png" id="15_sl3y8"]
[ext_resource type="Texture2D" uid="uid://c3yyi3jcwtxck" path="res://assets/sprites/explosion/1_12.png" id="16_gyus4"]
[ext_resource type="Texture2D" uid="uid://c0ffny8yxl16l" path="res://assets/sprites/explosion/1_13.png" id="17_3260o"]
[ext_resource type="Texture2D" uid="uid://cvh6120qcv4qs" path="res://assets/sprites/explosion/1_14.png" id="18_xhdg6"]
[ext_resource type="Texture2D" uid="uid://cv41mdxmgw7gq" path="res://assets/sprites/explosion/1_15.png" id="19_n8r84"]
[ext_resource type="Texture2D" uid="uid://dn21n6743weha" path="res://assets/sprites/explosion/1_16.png" id="20_en52g"]
[ext_resource type="Texture2D" uid="uid://bmw3ftvok2xue" path="res://assets/sprites/explosion/1_17.png" id="21_3j1l4"]
[ext_resource type="Texture2D" uid="uid://bc3wrop38tlt8" path="res://assets/sprites/explosion/1_18.png" id="22_yw5qm"]
[ext_resource type="Texture2D" uid="uid://c6yebtomfanip" path="res://assets/sprites/explosion/1_19.png" id="23_7hgys"]
[ext_resource type="Texture2D" uid="uid://bc14y5236n3ul" path="res://assets/sprites/explosion/1_20.png" id="24_rf2n4"]
[ext_resource type="Texture2D" uid="uid://ddhw06foerm0w" path="res://assets/sprites/explosion/1_21.png" id="25_h1pyw"]
[ext_resource type="Texture2D" uid="uid://g7g207pityua" path="res://assets/sprites/explosion/1_22.png" id="26_3ed4a"]
[ext_resource type="Texture2D" uid="uid://cqo4a7tc8imbr" path="res://assets/sprites/explosion/1_23.png" id="27_mx1h1"]
[ext_resource type="Texture2D" uid="uid://cw8c1nqv7ka66" path="res://assets/sprites/explosion/1_24.png" id="28_mf4fu"]
[ext_resource type="Texture2D" uid="uid://bgdqq3m7h6yiy" path="res://assets/sprites/explosion/1_25.png" id="29_phbf7"]
[ext_resource type="Texture2D" uid="uid://bkfci8vsn4684" path="res://assets/sprites/explosion/1_26.png" id="30_fxhec"]
[ext_resource type="Texture2D" uid="uid://mfvp10tbq6d2" path="res://assets/sprites/explosion/1_27.png" id="31_k4fb8"]
[ext_resource type="Texture2D" uid="uid://ch17tagw574ol" path="res://assets/sprites/explosion/1_28.png" id="32_foa2u"]
[ext_resource type="Texture2D" uid="uid://drx1fylcuk1w4" path="res://assets/sprites/explosion/1_29.png" id="33_nrky1"]
[ext_resource type="Texture2D" uid="uid://crnt1gypoci5k" path="res://assets/sprites/explosion/1_30.png" id="34_2cf1y"]
[ext_resource type="Texture2D" uid="uid://cedo1kbsd077j" path="res://assets/sprites/explosion/1_31.png" id="35_xkws1"]
[ext_resource type="Texture2D" uid="uid://civlf101o6xfl" path="res://assets/sprites/explosion/1_32.png" id="36_gwbb1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q4wwa"]
size = Vector3(0.693375, 0.204712, 0.846924)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1tpr"]
atlas = ExtResource("3_bvi5x")
region = Rect2(0, 0, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqif8"]
atlas = ExtResource("3_bvi5x")
region = Rect2(68, 0, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjwea"]
atlas = ExtResource("3_bvi5x")
region = Rect2(136, 0, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_lglkr"]
atlas = ExtResource("3_bvi5x")
region = Rect2(204, 0, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw8xy"]
atlas = ExtResource("3_bvi5x")
region = Rect2(272, 0, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl7w0"]
atlas = ExtResource("3_bvi5x")
region = Rect2(340, 0, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxpoh"]
atlas = ExtResource("3_bvi5x")
region = Rect2(408, 0, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_31l1w"]
atlas = ExtResource("3_bvi5x")
region = Rect2(476, 0, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4q33"]
atlas = ExtResource("3_bvi5x")
region = Rect2(544, 0, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3xpi"]
atlas = ExtResource("3_bvi5x")
region = Rect2(612, 0, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7g7u"]
atlas = ExtResource("3_bvi5x")
region = Rect2(0, 9, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_do8a1"]
atlas = ExtResource("3_bvi5x")
region = Rect2(68, 9, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xmd"]
atlas = ExtResource("3_bvi5x")
region = Rect2(136, 9, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_llq4q"]
atlas = ExtResource("3_bvi5x")
region = Rect2(204, 9, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehrrv"]
atlas = ExtResource("3_bvi5x")
region = Rect2(272, 9, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb8dq"]
atlas = ExtResource("3_bvi5x")
region = Rect2(340, 9, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cyb3"]
atlas = ExtResource("3_bvi5x")
region = Rect2(408, 9, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cadp"]
atlas = ExtResource("3_bvi5x")
region = Rect2(476, 9, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_aelyq"]
atlas = ExtResource("3_bvi5x")
region = Rect2(544, 9, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_eix0f"]
atlas = ExtResource("3_bvi5x")
region = Rect2(612, 9, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tl4o"]
atlas = ExtResource("3_bvi5x")
region = Rect2(0, 18, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xuon"]
atlas = ExtResource("3_bvi5x")
region = Rect2(68, 18, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_enugb"]
atlas = ExtResource("3_bvi5x")
region = Rect2(136, 18, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_84jev"]
atlas = ExtResource("3_bvi5x")
region = Rect2(204, 18, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_u78ok"]
atlas = ExtResource("3_bvi5x")
region = Rect2(272, 18, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn6np"]
atlas = ExtResource("3_bvi5x")
region = Rect2(340, 18, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn5lu"]
atlas = ExtResource("3_bvi5x")
region = Rect2(408, 18, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_iplj8"]
atlas = ExtResource("3_bvi5x")
region = Rect2(476, 18, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gbal"]
atlas = ExtResource("3_bvi5x")
region = Rect2(544, 18, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfkpg"]
atlas = ExtResource("3_bvi5x")
region = Rect2(612, 18, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_btp5y"]
atlas = ExtResource("3_bvi5x")
region = Rect2(0, 27, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp2eu"]
atlas = ExtResource("3_bvi5x")
region = Rect2(68, 27, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnvsy"]
atlas = ExtResource("3_bvi5x")
region = Rect2(136, 27, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_nya02"]
atlas = ExtResource("3_bvi5x")
region = Rect2(204, 27, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihwnp"]
atlas = ExtResource("3_bvi5x")
region = Rect2(272, 27, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1lym"]
atlas = ExtResource("3_bvi5x")
region = Rect2(340, 27, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3gta"]
atlas = ExtResource("3_bvi5x")
region = Rect2(408, 27, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j1n7"]
atlas = ExtResource("3_bvi5x")
region = Rect2(476, 27, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ocm8"]
atlas = ExtResource("3_bvi5x")
region = Rect2(544, 27, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_leqwu"]
atlas = ExtResource("3_bvi5x")
region = Rect2(612, 27, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqbv"]
atlas = ExtResource("3_bvi5x")
region = Rect2(0, 36, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_5on8c"]
atlas = ExtResource("3_bvi5x")
region = Rect2(68, 36, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_saj48"]
atlas = ExtResource("3_bvi5x")
region = Rect2(136, 36, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwpad"]
atlas = ExtResource("3_bvi5x")
region = Rect2(204, 36, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_edded"]
atlas = ExtResource("3_bvi5x")
region = Rect2(272, 36, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k0so"]
atlas = ExtResource("3_bvi5x")
region = Rect2(340, 36, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q76x"]
atlas = ExtResource("3_bvi5x")
region = Rect2(408, 36, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftfyp"]
atlas = ExtResource("3_bvi5x")
region = Rect2(476, 36, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycksj"]
atlas = ExtResource("3_bvi5x")
region = Rect2(544, 36, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm4s6"]
atlas = ExtResource("3_bvi5x")
region = Rect2(612, 36, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_giv4a"]
atlas = ExtResource("3_bvi5x")
region = Rect2(0, 45, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt34v"]
atlas = ExtResource("3_bvi5x")
region = Rect2(68, 45, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f2pf"]
atlas = ExtResource("3_bvi5x")
region = Rect2(136, 45, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_vefyl"]
atlas = ExtResource("3_bvi5x")
region = Rect2(204, 45, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5loh"]
atlas = ExtResource("3_bvi5x")
region = Rect2(272, 45, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4w35"]
atlas = ExtResource("3_bvi5x")
region = Rect2(340, 45, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_yijre"]
atlas = ExtResource("3_bvi5x")
region = Rect2(408, 45, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvyy2"]
atlas = ExtResource("3_bvi5x")
region = Rect2(476, 45, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_aots4"]
atlas = ExtResource("3_bvi5x")
region = Rect2(544, 45, 64, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_5plrs"]
atlas = ExtResource("3_bvi5x")
region = Rect2(612, 45, 64, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_jsbvp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1tpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqif8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjwea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lglkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw8xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl7w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxpoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31l1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4q33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3xpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7g7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do8a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llq4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehrrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb8dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cyb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cadp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aelyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eix0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tl4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xuon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enugb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84jev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u78ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn6np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn5lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iplj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gbal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfkpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btp5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp2eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnvsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nya02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihwnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1lym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3gta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j1n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ocm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_leqwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5on8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saj48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwpad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edded")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k0so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q76x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftfyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycksj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm4s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giv4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt34v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f2pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vefyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5loh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4w35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yijre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvyy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aots4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5plrs")
}],
"loop": true,
"name": &"Fire",
"speed": 30.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2ejuy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8in5j")
}, {
"duration": 1.0,
"texture": ExtResource("5_hsr7b")
}, {
"duration": 1.0,
"texture": ExtResource("6_ak5j8")
}, {
"duration": 1.0,
"texture": ExtResource("7_n3jig")
}, {
"duration": 1.0,
"texture": ExtResource("8_jnvbe")
}, {
"duration": 1.0,
"texture": ExtResource("9_u1l1w")
}, {
"duration": 1.0,
"texture": ExtResource("10_hq74p")
}, {
"duration": 1.0,
"texture": ExtResource("11_jtnfk")
}, {
"duration": 1.0,
"texture": ExtResource("12_fgrus")
}, {
"duration": 1.0,
"texture": ExtResource("13_toa0v")
}, {
"duration": 1.0,
"texture": ExtResource("14_48swj")
}, {
"duration": 1.0,
"texture": ExtResource("15_sl3y8")
}, {
"duration": 1.0,
"texture": ExtResource("16_gyus4")
}, {
"duration": 1.0,
"texture": ExtResource("17_3260o")
}, {
"duration": 1.0,
"texture": ExtResource("18_xhdg6")
}, {
"duration": 1.0,
"texture": ExtResource("19_n8r84")
}, {
"duration": 1.0,
"texture": ExtResource("20_en52g")
}, {
"duration": 1.0,
"texture": ExtResource("21_3j1l4")
}, {
"duration": 1.0,
"texture": ExtResource("22_yw5qm")
}, {
"duration": 1.0,
"texture": ExtResource("23_7hgys")
}, {
"duration": 1.0,
"texture": ExtResource("24_rf2n4")
}, {
"duration": 1.0,
"texture": ExtResource("25_h1pyw")
}, {
"duration": 1.0,
"texture": ExtResource("26_3ed4a")
}, {
"duration": 1.0,
"texture": ExtResource("27_mx1h1")
}, {
"duration": 1.0,
"texture": ExtResource("28_mf4fu")
}, {
"duration": 1.0,
"texture": ExtResource("29_phbf7")
}, {
"duration": 1.0,
"texture": ExtResource("30_fxhec")
}, {
"duration": 1.0,
"texture": ExtResource("31_k4fb8")
}, {
"duration": 1.0,
"texture": ExtResource("32_foa2u")
}, {
"duration": 1.0,
"texture": ExtResource("33_nrky1")
}, {
"duration": 1.0,
"texture": ExtResource("34_2cf1y")
}, {
"duration": 1.0,
"texture": ExtResource("35_xkws1")
}, {
"duration": 1.0,
"texture": ExtResource("36_gwbb1")
}],
"loop": false,
"name": &"Exposion",
"speed": 30.0
}]

[node name="Enemy" type="Node3D"]
script = ExtResource("1_y60oy")

[node name="Area3D" type="Area3D" parent="." groups=["Enemy"]]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00673676, 0.00323486, 0.0831299)
shape = SubResource("BoxShape3D_q4wwa")

[node name="Spaceship" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(0.101, 0, 0, 0, 0.101, 0, 0, 0, 0.101, -0.34228, -0.0986096, 0.537754)
mesh = ExtResource("1_7l8wa")

[node name="Fire1" type="AnimatedSprite3D" parent="Area3D"]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 3.82137e-15, 4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -0.238941, 0, -0.56862)
sprite_frames = SubResource("SpriteFrames_jsbvp")
animation = &"Fire"
autoplay = "Fire"
frame_progress = 0.946751

[node name="Fire2" type="AnimatedSprite3D" parent="Area3D"]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 3.82137e-15, 4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0.247997, 0, -0.56862)
sprite_frames = SubResource("SpriteFrames_jsbvp")
animation = &"Fire"
autoplay = "Fire"
frame_progress = 0.730764

[node name="Audio" type="AudioStreamPlayer" parent="Area3D"]

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="Area3D"]
aabb = AABB(-0.338379, -0.132423, -0.383727, 0.676758, 0.264847, 0.897336)

[node name="Explosion" type="AnimatedSprite3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -0.0480247, 0.426901, -0.0104297)
billboard = 1
sprite_frames = SubResource("SpriteFrames_2ejuy")
animation = &"Exposion"
frame = 22
frame_progress = 0.337463

[node name="Audio" type="AudioStreamPlayer3D" parent="Explosion"]
transform = Transform3D(0.333333, 0, 0, 0, 0.333333, 0, 0, 0, 0.333333, 0.0168495, 0, 0.157715)
max_distance = 8.0

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="screen_exited" from="Area3D/VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
